register: Fix spelling error

--- a/templates/register.html
+++ b/templates/register.html
@@ -26,7 +26,7 @@
                 <label for="reg-password" class="form__label">Password</label>
                 <input type="password" name="reg-password" class="form__input" id="reg-password" placeholder="Type your passsword here" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,25}" minlength="6" maxlength="25" required>
                 <div class="invalid-feedback">
-                    <p>Must contain at least:<br>one number,<br>one uppercase letter,<br>one lowercase letter<br>6 or more characters.<br>No spaces or specail characters</p>
+                    <p>Must contain at least:<br>one number,<br>one uppercase letter,<br>one lowercase letter<br>6 or more characters.<br>No spaces or special characters</p>
                 </div>
             </div>
             <p class="form__input-check block">Please check your password is correct before submitting</p>
