--- a/templates/rec-card.html
+++ b/templates/rec-card.html
@@ -7,6 +7,8 @@
         <form class="rec-card__bookmark-form" action="{{ url_for('profile', profile_name=profile.username, profile_id=profile._id) }}" method="POST">
     {% elif query %}
         <form class="rec-card__bookmark-form" action="{{ url_for('search', query=query) }}" method="POST">
+    {% elif order_by %}
+        <form class="rec-card__bookmark-form" action="{{ url_for('view_all', order_by=order_by) }}" method="POST">
     {% else %}
         <form class="rec-card__bookmark-form" action="{{ url_for('home') }}" method="POST">
     {% endif %}
