--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                         <li class="nav-mobile nav-mobile--search">
                             <form class="site-header__mobile-search" action="{{ url_for('search') }}" method="POST">
                                 <input type="hidden" name="query" class="search-input" value="">
-                                <button class="mobile-search" name="form-submit" value="search"><i class="fas fa-search" aria-label="search"></i> Search</button>
+                                <button class="mobile-search" name="form-submit" value="search"><i class="fas fa-search"></i> Search</button>
                             </form>
                         </li>
 
