--- a/templates/view-all.html
+++ b/templates/view-all.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
     <section class="view-all-header">
-       <h1 class=>View All</h1>
+       <h1>View All</h1>
        <div class="view-all-container">
             <a href="{{ url_for('view_all', order_by='newly-added') }}" class="cta cta--order">Newly Added</a>
             <a href="{{ url_for('view_all', order_by='top-rated') }}" class="cta cta--order">Top Rated</a>
