Update in indentations, comments and delete extra spaces

--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
         </div>
     </section>
     {% for cat in sort_cats %}
-        <!--New Cocktails-->
+        <!--Cocktails-->
         <section class="rec-carsousel">
             <div class="rec-carsousel__header">
                 <h2 class="rec-carsousel__title inline-block">{{ cat.name }}</h2>
