--- a/templates/register.html
+++ b/templates/register.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+<!--Register-->
 <section class="center-page">
     <div class="page-icon">
         <i class="far fa-edit"></i>
