--- a/templates/search.html
+++ b/templates/search.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <!--Search-->
     <section class="center-text">
         <h1>Search</h1>
        <form class="search-from form" action="{{ url_for('search') }}" method="POST">
