--- a/templates/view-all.html
+++ b/templates/view-all.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+    <!--View All-->
     <section class="view-all-header">
        <h1>View All</h1>
        <div class="view-all-container">
